guides/e-dp-disaggregation/gaie-inference-scheduling-epp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: gaie-inference-scheduling
    meta.helm.sh/release-namespace: epd
  creationTimestamp: "2026-02-24T09:51:06Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gaie-inference-scheduling-epp
    app.kubernetes.io/version: v1.3.0
  name: gaie-inference-scheduling-epp
  namespace: epd
  resourceVersion: "449768573"
  uid: 1024630e-0686-41eb-b930-b9b8f223368b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      inferencepool: gaie-inference-scheduling-epp
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        inferencepool: gaie-inference-scheduling-epp
    spec:
      containers:
      - args:
        - --pool-name
        - gaie-inference-scheduling
        - --pool-namespace
        - epd
        - --pool-group
        - inference.networking.k8s.io
        - --zap-encoder
        - json
        - --config-file
        - /config/default-plugins.yaml
        - --kv-cache-usage-percentage-metric
        - vllm:kv_cache_usage_perc
        - --v
        - "1"
        - --tracing=false
        image: ghcr.io/llm-d/llm-d-inference-scheduler:v0.5.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: epp
        ports:
        - containerPort: 9002
          name: grpc
          protocol: TCP
        - containerPort: 9003
          name: grpc-health
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          grpc:
            port: 9003
            service: inference-extension
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: plugins-config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: gaie-inference-scheduling-epp
      serviceAccountName: gaie-inference-scheduling-epp
      terminationGracePeriodSeconds: 130
      volumes:
      - configMap:
          defaultMode: 420
          name: gaie-inference-scheduling-epp
        name: plugins-config-volume
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-02-24T09:51:07Z"
    lastUpdateTime: "2026-02-24T09:51:07Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-02-24T09:51:06Z"
    lastUpdateTime: "2026-02-24T09:51:07Z"
    message: ReplicaSet "gaie-inference-scheduling-epp-77fdcf8fff" has successfully
      progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
