guides/e-dp-disaggregation/infra-inference-scheduling-inference-gateway-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: infra-inference-scheduling
    meta.helm.sh/release-namespace: epd
  creationTimestamp: "2026-02-24T09:50:54Z"
  generation: 1
  labels:
    app.kubernetes.io/component: inference-gateway
    app.kubernetes.io/gateway: infra-inference-scheduling-inference-gateway
    app.kubernetes.io/instance: infra-inference-scheduling
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: llm-d-infra
    app.kubernetes.io/version: v0.3.0
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-class-name: istio
    gateway.networking.k8s.io/gateway-name: infra-inference-scheduling-inference-gateway
    helm.sh/chart: llm-d-infra-v1.3.6
    istio.io/enable-inference-extproc: "true"
  name: infra-inference-scheduling-inference-gateway-istio
  namespace: epd
  ownerReferences:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    kind: Gateway
    name: infra-inference-scheduling-inference-gateway
    uid: 7d1ff285-1f79-4b08-99e5-6613a1e8762c
  resourceVersion: "449779718"
  uid: dbf173c1-1dea-4842-913f-50aee991f6d3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: infra-inference-scheduling-inference-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        istio.io/rev: default
        meta.helm.sh/release-name: infra-inference-scheduling
        meta.helm.sh/release-namespace: epd
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: inference-gateway
        app.kubernetes.io/gateway: infra-inference-scheduling-inference-gateway
        app.kubernetes.io/instance: infra-inference-scheduling
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: llm-d-infra
        app.kubernetes.io/version: v0.3.0
        gateway.istio.io/managed: istio.io-gateway-controller
        gateway.networking.k8s.io/gateway-class-name: istio
        gateway.networking.k8s.io/gateway-name: infra-inference-scheduling-inference-gateway
        helm.sh/chart: llm-d-infra-v1.3.6
        istio.io/enable-inference-extproc: "true"
        service.istio.io/canonical-name: infra-inference-scheduling-inference-gateway-istio
        service.istio.io/canonical-revision: latest
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - args:
        - proxy
        - router
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --proxyLogLevel
        - error
        - --proxyComponentLogLevel
        - misc:error
        - --log_output_level
        - default:error
        image: docker.io/istio/proxyv2:1.28.1
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15020
          name: metrics
          protocol: TCP
        - containerPort: 15021
          name: status-port
          protocol: TCP
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /healthz/ready
            port: 15021
            scheme: HTTP
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "16"
            memory: 16Gi
          requests:
            cpu: "4"
            memory: 4Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1001929999
          runAsNonRoot: true
          runAsUser: 1001929999
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15021
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/secrets/workload-spiffe-uds
          name: workload-socket
        - mountPath: /var/run/secrets/credential-uds
          name: credential-socket
        - mountPath: /var/run/secrets/workload-spiffe-credentials
          name: workload-certs
        - mountPath: /var/run/secrets/istio
          name: istiod-ca-cert
        - mountPath: /var/lib/istio/data
          name: istio-data
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /var/run/secrets/tokens
          name: istio-token
        - mountPath: /etc/istio/pod
          name: istio-podinfo
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      serviceAccount: infra-inference-scheduling-inference-gateway-istio
      serviceAccountName: infra-inference-scheduling-inference-gateway-istio
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: workload-socket
      - emptyDir: {}
        name: credential-socket
      - emptyDir: {}
        name: workload-certs
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - emptyDir: {}
        name: istio-data
      - downwardAPI:
          defaultMode: 420
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.annotations
            path: annotations
        name: istio-podinfo
      - name: istio-token
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - configMap:
          defaultMode: 420
          name: istio-ca-root-cert
        name: istiod-ca-cert
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-02-24T09:52:10Z"
    lastUpdateTime: "2026-02-24T09:52:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-02-24T09:50:54Z"
    lastUpdateTime: "2026-02-24T09:52:10Z"
    message: ReplicaSet "infra-inference-scheduling-inference-gateway-istio-58547c45d"
      has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
