guides/e-dp-disaggregation/httproute.gke.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-e-dp-disaggregation
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infra-e-dp-disaggregation-inference-gateway
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: gaie-e-dp-disaggregation
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /

# Made with Bob
